# FitsRatingToolLinux

./: FitsRatingTool.sln
Common/: Common.csproj
Common/Models/Evaluation/: IEvaluationExporterContext.cs
Common/Models/FitsImage/: IFitsImageMetadata.cs
ConsoleApp/: ConsoleApp.csproj
Exporters/: Exporters.csproj
Exporters/Services/: IVoyagerEvaluationExporterFactory.cs
FitsLoader/: FitsLoader.csproj  Resources.Designer.cs  Resources.resx
FitsLoader/Native/: FitsImageDataHandle.cs  NativeFitsLoader.cs  NativeFitsLoaderFactory.cs
GuiApp/: App.axaml  GuiApp.csproj  Program.cs
GuiApp/Assets/Styles/: CheckBox.axaml  ComboBox.axaml  ContextMenu.axaml  DataGrid.axaml  MenuFlyoutPresenter.axaml  MenuItem.axaml  ScrollableTabControl.axaml  StatisticsControl.axaml
GuiApp/UI/: ViewLocator.cs
GuiApp/UI/App/Views/: AppImageItemView.axaml.cs  AppMainView.axaml  AppMainView.axaml.cs  AppProfileSelectorView.axaml.cs  AppViewerOverlayView.axaml.cs
GuiApp/UI/App/Windows/: AppWindow.axaml  (+1 more)
GuiApp/UI/Controls/: ClickAction.cs  DataGridSelectableTextColumn.cs  FixedContextMenu.cs  PrecisionSlider.cs  ProgressRing.axaml  ProgressRing.axaml.cs  ScrollableTabControl.cs  WindowExtensions.cs
GuiApp/UI/FitsImage/: IFitsImageHeaderRecordViewModel.cs  IFitsImageViewModel.cs  IFitsImageViewerViewModel.cs
GuiApp/Utils/: DpiHelper.cs
NativeFitsLoader/: CMakeLists.txt  cmake.yaml  dll.cpp  fitsattributes.h  fitsdataloader.h  fitsloader.cpp  framework.h  photometry.cpp  photometry.h  sep_wrapper.h  stretch.h
NativeFitsLoaderBootstrapper/: NativeFitsLoaderBootstrapper.csproj
(+78 files in other folders)
